Fix layout issues, harmonize mixins.scss (#185)
* fix: layout issues, harmonize mixins.scss

* fix: layout issues, harmonize mixins.scss

* fix: layout tuning

--- a/src/app/announcement/announcement-detail/announcement-detail.component.scss
+++ b/src/app/announcement/announcement-detail/announcement-detail.component.scss
@@ -1,12 +1,15 @@
+@import '/src/_mixins.scss';
+
+@include correct-select-button;
+@include dialog-footer-buttons;
+@include dialog-non-full-size-modal;
+
 :host ::ng-deep {
   label.float-label {
     color: var(--emphasis-medium);
   }
   .error-tailor-has-error ~ control-error {
     text-align: left;
-  }
-  .p-dialog .p-dialog-footer button {
-    margin-right: 0;
   }
   .p-calendar {
     .calender-today {
