--- a/src/app/announcement/announcement-search/announcement-search.component.scss
+++ b/src/app/announcement/announcement-search/announcement-search.component.scss
@@ -1,30 +1,5 @@
 @import '/src/_mixins.scss';
 
 @include danger-action;
-@include correct-search-criteria;
-@include correct-select-button;
 @include table-inline-buttons;
-
-:host ::ng-deep {
-  // responsive table result view
-  @media screen and (min-width: 576px) {
-    .sm\:table-cell {
-      display: table-cell !important;
-    }
-  }
-  @media screen and (min-width: 768px) {
-    .md\:table-cell {
-      display: table-cell !important;
-    }
-  }
-  @media screen and (min-width: 992px) {
-    .lg\:table-cell {
-      display: table-cell !important;
-    }
-  }
-  @media screen and (min-width: 1200px) {
-    .xl\:table-cell {
-      display: table-cell !important;
-    }
-  }
-}
+@include table-responsive-columns;
